<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:elevation="8dp"
    app:cardCornerRadius="10dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/itemsp_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/product_image_content"
                android:src="@drawable/ic_media_24" />


            <TextView
                android:id="@+id/itemsp_gia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/gia_text"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemsp_ten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/ten_san_pham"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/add_image_content"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_add_circle_24" />
    </FrameLayout>

</androidx.cardview.widget.CardView>