<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GioHangActivity">

    <ImageView
        android:id="@+id/ivEmptyCart_giohang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_image_content"
        android:src="@drawable/background_loading_ver2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <TextView
        android:id="@+id/tvEmptyCart_giohang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/no_product_in_cart"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/ivEmptyCart_giohang" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_giohang"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Giỏ Hàng" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_giohang"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/framelayout"
        app:layout_constraintTop_toBottomOf="@id/toolbar_giohang" />

    <View
        android:id="@+id/seperateView1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/framelayout" />

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tong_cong_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvTongTien_giohang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gia_text"
                android:textColor="@color/purple_price"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnDatHang_giohang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/dat_hang_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>