<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:id="@+id/linearlayout_chitiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_sptheoloai">

        <ImageView
            android:id="@+id/item_giohang_hinhanh"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/add_image_content"
            android:src="@drawable/ic_media_24"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="61dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_giohang_tensp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/ten_san_pham"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/item_giohang_giasp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:text="@string/gia_text"
                android:textColor="@color/purple_price"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_congtru_giohang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <ImageView
                        android:id="@+id/item_giohang_tru"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/add_image_content"
                        android:src="@drawable/ic_baseline_remove_24" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/item_giohang_soluong"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/so_luong"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <ImageView
                        android:id="@+id/item_giohang_cong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/add_image_content"
                        android:src="@drawable/ic_baseline_add_24" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>